<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="edit_group_info">Edit Group</string>
    <string name="rename_contact_group_name">Rename</string>
    <string name="no_contacts_group_name">No Group Name</string>
    <string name="contacts_group_name_exist">Existing Group Name</string>
    <string name="sure">Sure</string>
    <string name="contacts_group">Group</string>
    <string name="divided_group_to">Divide</string>
    <string name="add_group">Add Group</string>
    <string name="please_add_group">Please Add Group</string>
    <string name="delete">Delete</string>
    <string name="deleted">deleted</string>
    <string name="group_name_empty">Empty Group</string>
    <string name="all_selected">All Select</string>
    <string name="group_new">New Group</string>
    <string name="save">Save</string>
    <string name="menu_contacts_group_add">Add</string>
    <string name="menu_memory_query">Memory Query</string>
    <string name="contactor_will_be"><xliff:g id="COUNT">%1$d</xliff:g> contact will be <xliff:g id="OPTERATOR">%2$s</xliff:g></string>
    <string name="imported">imported</string>
    <string name="exported">exported</string>
    <string name="selected">selected</string>
    <string name="sharedUserLabel">Android Core Apps</string>
    <string name="contactsList">Contacts</string>
    <string name="launcherDialer">Phone</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_showBarcode">Show barcode</string>
    <string name="menu_editContact">Edit contact</string>
    <string name="menu_deleteContact">Delete contact</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_video_call">Video Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_sendEmail">Send email</string>
    <string name="menu_viewAddress">Map address</string>
    <string name="menu_makeDefaultNumber">Make default number</string>
    <string name="menu_makeDefaultEmail">Make default email</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="contactsSplitMessage">Contacts separated</string>
    <string name="splitConfirmation_title">Separate Contact</string>
    <string name="splitConfirmation">Are you sure you want to separate this single contact
        into multiple contacts: one for each set of contact information that was joined into it?
    </string>
    <string name="menu_joinAggregate">Join</string>
    <string name="menu_showSources">Show sources</string>
    <string name="menu_hideSources">Hide sources</string>
    <string name="titleJoinAggregate">Join contact</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Select the contact you want to join with <xliff:g id="name">%s</xliff:g>.</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_contactOptions">Options</string>
    <string name="contactOptionsTitle">Options</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="editContact_title_edit">Edit contact</string>
    <string name="editContact_title_insert">New contact</string>
    <string name="menu_addItem">More info</string>
    <string name="label_phonetic_name">Phonetic</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="label_groups">Groups</string>
    <string name="group_list">, <xliff:g id="groupName">%s</xliff:g></string>
    <string name="menu_viewGroup">Edit groups</string>
    <string name="ghostData_name">First and Last</string>
    <string name="ghostData_phonetic_name">Phonetic name</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="ghostData_im">IM name</string>
    <string name="ghostData_notes">My note</string>
    <string name="ghostData_phone">Phone number</string>
    <string name="ghostData_email">Email address</string>
    <string name="ghostData_postal">Postal address</string>
    <string name="ghostData_group">Display group</string>
    <string name="invalidContactMessage">The contact does not exist.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="selectLabel">Select label</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Postal address</string>
    <string name="otherLabelsGroup">Other</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="errorDialogTitle">No pictures</string>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attachToContact">Contact icon</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="menu_displayGroup">Display options</string>
    <string name="displayGroups">Display options</string>
    <string name="syncGroupPreference">Edit sync groups</string>
    <string name="importFromSim">Import contacts</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="send_to_voicemail_view">Calls are sent directly to voicemail.</string>
    <string name="default_ringtone">Default</string>
    <string name="addPicture">Add icon</string>
    <string name="changePicture">Change icon</string>
    <string name="removePicture">Remove icon</string>
    <string name="noContacts">No contacts.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="noFavorites">No favorites.</string>
    <string name="select_group_title">Groups</string>
    <string name="groupEmpty">Your \"<xliff:g id="groupName">%s</xliff:g>\" group is empty.</string>
    <string name="showAllGroups">All contacts</string>
    <string name="showFilterPhones">Only contacts with phones</string>
    <string name="showFilterPhonesDescrip">Only display contacts that have phone numbers</string>
    <string name="headerContactGroups">Choose contacts to display</string>
    <plurals name="groupDescrip">
        <item quantity="other"><xliff:g id="count">%0$d</xliff:g> contacts</item>
    </plurals>
    <plurals name="groupDescripPhones">
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> contacts, <xliff:g id="countWithPhones">%2$d</xliff:g> with phones</item>
    </plurals>
    <string name="syncAllGroups">Sync all contacts</string>
    <string name="groupNameMyContacts">My contacts</string>
    <string name="groupNameWithPhones">Contacts with phone numbers</string>
    <string name="starredInAndroid">Starred in Android</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactCreatedToast">Contact created.</string>
    <string name="contactSavedToast">Contact saved.</string>
	<string name="contactDeletedToast">Contact deleted.</string>
    <string name="contactSavedErrorToast">Error, unable to save contact changes.</string>
    <string name="listSeparatorCallNumber">Dial number</string>
    <string name="listSeparatorCallNumber_edit">Phone numbers</string>
    <string name="number_empty">"phone number is empty，can't insert'"</string>
    <string name="listSeparatorSendSmsMms">Send text</string>
    <string name="listSeparatorSendEmail">Send email</string>
    <string name="listSeparatorSendEmail_edit">Email addresses</string>
    <string name="listSeparatorSendIm">Send instant message</string>
    <string name="listSeparatorSendIm_edit">Chat addresses</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="search_bar_hint">Search contacts</string>
    <string name="select_contacts">select contacts</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="setting_digits">1234567890+*#,;</string>
    <string name="menu_contacts_group">Contacts Group</string>
    <string name="menu_delete">Contacts Delete</string>
    <string name="send_message">Message</string>
    <string name="conatcts_name">"name"</string>
    <string name="phone1">"phone1"</string>
    <string name="phone2">"phone2"</string>
    <string name="phone3">"phone3"</string>
    <string name="phone4">"phone4"</string>
    <string name="concacts_email">"email"</string>
    <string name="ghostData_phone1">"Phone number1"</string>
    <string name="ghostData_phone2">"Phone number2"</string>
    <string name="ghostData_phone3">"Phone number3"</string>
    <string name="ghostData_phone4">"Phone number4"</string>
    <string name="ghostData_concatct_email">"Email"</string>
    <string name="blacklist">Black List</string>
    <string name="group_name">group name</string>
    <string name="contact_list_gallery_label">Gallery</string>
    <string name="add_new_contact_label">Add</string>
    <string name="hello">Wu xiang</string>
    <string name="contact_phone_numbler">13528750390</string>
    <string name="contact_phone_contact_people">Contacts people</string>
    <string name="contact_phone_contact_phone">Contacts phone</string>
    <string name="contact_phone_contact_btn_ok">Submit</string>
    <string name="contact_phone_contact_btn_canel">Canel</string>
    <string name="gallery_call">Call</string>
    <string name="contact_list_label">List</string>
    <string name="contact_show_way">Show way</string>
</resources>