<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#505050"
  android:gravity="center_horizontal">
  
  <TextView 
  android:id="@+id/tv01"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/contact_show_way"
  android:textSize="35dp"
  android:layout_marginTop="15dp"
  android:layout_gravity="center_horizontal"/>
  
  <Button 
  android:id="@+id/contact_list_gallery_btn"
  android:layout_width="280dp"
  android:layout_height="wrap_content"
  android:background="@drawable/bg_button_01"
  android:text="@string/contact_list_gallery_label"
  android:textSize="35dp"
  android:layout_marginTop="40dp"/>
  
  <Button 
  android:id="@+id/contact_list_btn"
  android:layout_width="280dp"
  android:layout_height="wrap_content"
  android:background="@drawable/bg_button_01"
  android:text="@string/contact_list_label"
  android:textSize="35dp"
  android:layout_marginTop="30dp"/>
  
    
</LinearLayout>
