<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#505050"
  >
  <ImageView 
    android:id="@+id/phone_contact_image"
    android:layout_height="222dip"
    android:layout_width="296dip"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="0dip"
    android:src="@drawable/contact_phone_image_1"
    />
  <TextView  
    android:id="@+id/phone_contact_name"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    android:textSize="25dip"
    android:layout_below="@id/phone_contact_image"
    android:layout_marginTop="10dip"
    android:gravity="center_horizontal"
    android:textColor="#FFFFFF"
    />
  <TextView
    android:id="@+id/phone_contact_numbler"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="25dip"
    android:gravity="center_horizontal"
    android:layout_below="@id/phone_contact_name"
    android:text="@string/contact_phone_numbler"
    android:textColor="#FFFFFF"
    android:singleLine="true"
    />
    <TableLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/phone_contact_numbler"
      android:paddingLeft="15dip"
      android:paddingRight="15dip"
   	  android:layout_marginTop="10dip">
    	<TableRow >
    	  <com.android.contacts.ui.widget.DontPressWithParentButton 
		    android:id="@+id/phone_contact_edit_btn"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
        android:layout_weight="1"
		    android:text="@string/editContact_title_edit"
		    android:textSize="28dip"
		    android:background="@drawable/btn_button_bg"
		    android:textColor="#FFFFFF"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
		    />
		  <com.android.contacts.ui.widget.DontPressWithParentButton 
		    android:id="@+id/phone_contact_add_btn"
		    android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
		    android:text="@string/add_new_contact_label"
		    android:textSize="28dip"
		    android:background="@drawable/btn_button_bg"
		    android:textColor="#FFFFFF"
		    />
  	  </TableRow>
   	  <TableRow >
		  <com.android.contacts.ui.widget.DontPressWithParentButton 
		    android:id="@+id/phone_contact_call_btn"
		    android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
		    android:text="@string/gallery_call"
		    android:textSize="28dip"
		    android:background="@drawable/btn_confirm_bg"
		    android:textColor="#FFFFFF"
        android:layout_marginRight="10dip"
		    />
		  <com.android.contacts.ui.widget.DontPressWithParentButton 
		    android:id="@+id/phone_contact_sms_btn"
		    android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
		    android:text="@string/send_message"
		    android:textSize="28dip"
		    android:background="@drawable/btn_confirm_bg"
		    android:textColor="#FFFFFF"
		    />
       </TableRow>
    </TableLayout>
</RelativeLayout>
