<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2008 The Android Open Source Project Licensed under the
		Apache License, Version 2.0 (the "License"); you may not use this file
		except in compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
		by applicable law or agreed to in writing, software distributed under
		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

    <LinearLayout
        android:id="@+id/searchTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <EditText
            android:id="@+id/searchtext"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_marginLeft="4dip"
            android:layout_marginBottom="0dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:inputType="textNoSuggestions"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/search_bar_hint"
            android:drawableRight="@drawable/magnifying_glass"
            android:freezesText="true"
        />
    </LinearLayout>

	<RelativeLayout android:id="@+id/layoutSelectAll"
        android:layout_below="@+id/searchTextView"
		android:layout_width="fill_parent" android:layout_height="wrap_content" >
		<TextView android:id="@+id/tvcheckPrompt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dip"
			android:layout_marginTop="12dip"
			android:text="@string/select_contacts"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="12dip" />
		<TextView android:id="@+id/tvcheckbox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/all_selected"
		    android:textSize="16dip"
		    android:layout_marginTop="12dip"
		    android:layout_toLeftOf="@+id/cbSelctAll"/>
		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cbSelctAll"
			android:layout_alignParentRight="true"
			android:layout_marginRight="8dip"></CheckBox>
	</RelativeLayout>

	<LinearLayout android:id="@+id/layoutConfirm"
		android:orientation="horizontal" android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/btnOk" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/ok"
			android:layout_weight="1" android:layout_marginLeft="15dip"
			android:layout_marginRight="2dip" />

		<Button android:id="@+id/btnCancel" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/cancel"
			android:layout_weight="1" android:layout_marginLeft="2dip"
			android:layout_marginRight="15dip" />

	</LinearLayout>

	<ListView android:id="@android:id/list" android:layout_width="match_parent"
		android:layout_height="match_parent" android:fastScrollEnabled="true"
		android:layout_below="@+id/layoutSelectAll" android:layout_above="@+id/layoutConfirm"></ListView>

	<ScrollView android:id="@android:id/empty"
	    android:layout_below="@+id/searchTextView"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:fillViewport="true">
		<TextView android:id="@+id/emptyText" android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/noContacts"
			android:textSize="20sp" android:textColor="?android:attr/textColorSecondary"
			android:paddingLeft="10dip" android:paddingRight="10dip"
			android:paddingTop="10dip" android:lineSpacingMultiplier="0.92" />
	</ScrollView>

</RelativeLayout>
