<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contacts_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="12dip" />

        <TextView
            android:id="@+id/selete_all_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_selected"
            android:textSize="16dip"
            android:layout_marginTop="12dip"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/selete_all" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selete_all"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dip" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/group_name_empty"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
